# rust-static-lib

./: .prototools  Makefile
.github/workflows/: test.yml
cpp-lib/: CMakeLists.txt
cpp-lib/src/: greeting.cpp  greeting.h
cpp-test-app/: CMakeLists.txt
cpp-test-app/src/: main.cpp
rust-app/: Cargo.toml  build.rs
rust-app/src/: main.rs
